--- a/app/src/main/res/layout/activity_conversor_moeda.xml
+++ b/app/src/main/res/layout/activity_conversor_moeda.xml
@@ -36,6 +36,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:id="@+id/et_paraConverter"
         android:minWidth="300dp"
         android:layout_below="@+id/spinner"
