--- a/app/src/main/res/layout/activity_conversor_velocidade.xml
+++ b/app/src/main/res/layout/activity_conversor_velocidade.xml
@@ -7,66 +7,67 @@
     tools:context=".ConversorVelocidade_Activity">
 
     <TextView
+        android:id="@+id/tv_titulo1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="10sp"
-        android:id="@+id/tv_titulo1"
         android:text="Conversor Velocidade"
-        android:layout_centerHorizontal="true"/>
+        android:textSize="30sp" />
 
     <TextView
+        android:id="@+id/tv_titulo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_titulo1"
-        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="10sp"
-        android:id="@+id/tv_titulo2"
         android:text="Escolha uma opção abaixo: "
-        android:layout_centerHorizontal="true"/>
+        android:textSize="20sp" />
 
     <Spinner
-        android:layout_width="250sp"
         android:id="@+id/spinner"
+        android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_titulo2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25sp"/>
+        android:layout_marginTop="25sp" />
 
     <EditText
+        android:id="@+id/et_paraConverter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/et_paraConverter"
-        android:minWidth="300dp"
         android:layout_below="@+id/spinner"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="50sp"
-        android:layout_centerHorizontal="true"/>
+        android:inputType="numberDecimal"
+        android:minWidth="300dp" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Converter"
-        android:padding="20sp"
         android:id="@+id/btn_converter"
-        android:layout_below="@+id/et_paraConverter"
-        android:layout_marginTop="50sp"/>
-
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/et_paraConverter"
+        android:layout_marginTop="50sp"
         android:padding="20sp"
-        android:text="Voltar"
+        android:text="Converter" />
+
+    <Button
         android:id="@+id/btn_voltar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/btn_converter"
-        android:layout_marginTop="15sp"/>
+        android:layout_marginTop="15sp"
+        android:padding="20sp"
+        android:text="Voltar" />
 
     <TextView
+        android:id="@+id/tv_resultado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_resultado"
-        android:layout_centerHorizontal="true"
-        android:textSize="30sp"
         android:layout_below="@id/btn_voltar"
-        android:layout_marginTop="60sp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60sp"
+        android:textSize="30sp" />
 
 </RelativeLayout>
